--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -8,3 +8,4 @@ Consult the [https://www.mediawiki.org/wiki/Special:MyLanguage/Help:Contents Use
 * [https://lists.wikimedia.org/mailman/listinfo/mediawiki-announce MediaWiki release mailing list]
 * [https://www.mediawiki.org/wiki/Special:MyLanguage/Localisation#Translation_resources Localise MediaWiki for your language]
 * [https://www.mediawiki.org/wiki/Special:MyLanguage/Manual:Combating_spam Learn how to combat spam on your wiki]
+git status:  HEAD detached at copy/master nothing to commit, working tree clean
